--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "url": "https://github.com/feross/string-to-stream/issues"
   },
   "dependencies": {
-    "inherits": "^2.0.1"
+    "inherits": "^2.0.1",
+    "readable-stream": "^2.1.0"
   },
   "devDependencies": {
     "concat-stream": "^1.4.6",
