--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "url": "https://github.com/feross/string-to-stream/issues"
   },
   "dependencies": {
-    "inherits": "^2.0.1",
     "readable-stream": "^3.4.0"
   },
   "devDependencies": {
@@ -17,14 +16,14 @@
   },
   "homepage": "https://github.com/feross/string-to-stream",
   "keywords": [
-    "string to stream",
-    "string stream",
-    "convert string to stream",
     "convert",
-    "string",
-    "stream",
+    "convert string to stream",
     "str",
-    "str stream"
+    "str stream",
+    "stream",
+    "string",
+    "string stream",
+    "string to stream"
   ],
   "license": "MIT",
   "main": "index.js",
